--- a/pages/chapter1.tex
+++ b/pages/chapter1.tex
@@ -99,28 +99,28 @@
 
     \section{本文研究内容}
     \esection{Research Contents}
-    
+
     本文针对自然场景图像中的文字检测方法展开研究，为解决文字边缘与背景边缘之间的粘连问题而提出一种基于边缘骨架切割的场景文字检测子。而为了改进文字定位包围盒重叠率不足的问题，又提出一种基于二叉树搜索的文字行定位优化框架。本文的主要研究内容如下：
-    
+
     1）首先本文对现有的自然场景图像中的文字检测方法进行了充分的调研，对其中主流的基于区域和基于连通部件的这两类方法进行了分析和探讨，并举一些典型的方法来说明场景文字检测领域存在的难题。
-    
+
     2）针对文字边缘与背景边缘之间的粘连问题，本文提出了一种基于边缘骨架切割的文字检测方法。首先对于输入的场景文字图片，利用结构化边缘检测方法得到边缘响应图，然后基于一系列像素强度值阈值，对边缘响应图进行分割，得到相应的二值化边缘图。接着在每个二值边缘图上，通过细化操作得到其边缘骨架图，并通过8 领域内像素点分析所找到的边缘骨架结点。而文字边缘与背景间的粘连点，就存在于这些边缘骨架结点中。因此断开粘连点得到候选的文字边缘骨架，然后经过形态学滤除来过滤掉大部分明显不是文字的边缘骨架，剩余的不易区分的非文字边缘骨架，可通过基于 CNN 的分类器来进一步滤除。最后基于非极大值抑制和文本行聚集操作，得到文本行定位结果。在公开数据集ICDAR以及MSRA上的实验结果证明了该方法在处理边缘粘连问题方面的有效性。
-    
-    3）针对文字定位包围盒与文字真实定位之间重叠率不足的问题，本章提出的是基于二叉树搜索的文字检测方法。首先对于输入的场景文字图片，利用边缘骨架切割检测子来提取粗略的候选文字包围盒定位结果。然而其定位结果存在重叠率不足的问题，为了进一步提高文字检测的精度，本文提出一种统计边缘响应算法，接着通过对统计边缘响应进行水平投影、求取梯度以及执行非极大值抑制等操作，以获得候选文本行。最后由生成的候选文本行中建立起二叉树型的搜索空间，并根据优化策略从搜索空间中找到最优的文本行定位结果。该结果即是经过优化后得到的文字细致定位结果，相比于边缘骨架切割检测子所得到的粗略定位结果而言，其文字检测的精度得到了大幅提升。在ICDAR系列测试集以及谷歌街景数据集SVT上，我们将本章提出的方法与其它先进方法以及边缘骨架切割检测子都做了对比实验。实验结果验证了该方法的确优化了文字包围盒的定位效果。
+
+    3）针对文字定位包围盒与文字真实定位之间重叠率不足的问题，本章提出的是基于二叉树搜索的文本行定位矫正方法。首先对于输入的场景文字图片，利用边缘骨架切割检测子来提取粗略的候选文字包围盒定位结果。然而其定位结果存在重叠率不足的问题，为了进一步提高文字检测的精度，本文提出一种统计边缘响应算法，接着通过对统计边缘响应进行水平投影、求取梯度以及执行非极大值抑制等操作，以获得候选文本行。最后由生成的候选文本行中建立起二叉树型的搜索空间，并根据优化策略从搜索空间中找到最优的文本行定位结果。该结果即是经过优化后得到的文字细致定位结果，相比于边缘骨架切割检测子所得到的粗略定位结果而言，其文字检测的精度得到了大幅提升。在ICDAR系列测试集以及谷歌街景数据集SVT 上，我们将本章提出的方法与其它先进方法以及边缘骨架切割检测子都做了对比实验。实验结果验证了该方法的确优化了文字包围盒的定位效果。
 
     \section{论文的组织结构}
     \esection{Thesis Structure}
 
     本论文是根据提出、分析然后解决问题的思路来组织内容的，后续的章节安排如下所示：
-    
+
     第一章的内容是绪论部分。本章首先对自然场景图像中的文字检测这个研究方向的背景与意义进行介绍，然后对这个领域内的研究现状及其问题进行了调研和分析，接着概述了本论文的研究内容以及组织结构。
-    
+
     第二章是论文的相关理论与技术。主要介绍了自然场景图像中的文字检测方法的两大类主流方法：基于区域的方法和基于连通部件的方法。然后各举一些经典方法以分析每类方法的优缺点，从而奠定本文研究工作的理论基础。
-    
+
     第三章是基于边缘骨架切割的文字检测方法。本章首先引出边缘粘连问题这个文字检测领域中的难题，然后开始介绍针对该难题所提出的边缘骨架切割文字检测子的具体实现：包含该方法的原理、步骤以及详述。最后通过在公开数据集上将该方法与其它先进方法进行对比试验来验证方法的精度和时间性能。
-    
+
     第四章是基于二叉树搜索的文字行定位优化方法。本章首先指出第三章提出方法可能存在的不足：即文字包围盒的定位重叠率达不到要求，然后详述基于二叉树搜索的文字行定位矫正算法来作改进。最后利用在多个数据集上的实验方法来验证了本章提出方法在文字包围盒定位精度上的提升。
-    
+
     第五章是结论和展望：主要是总结全文，并展望了接下来的研究工作。
-    
-    
+
+
