--- a/pages/chapter1.tex
+++ b/pages/chapter1.tex
@@ -23,9 +23,9 @@
 \chapter{绪论}
 \echapter{Introduction}
 
-本章主要对本文研究内容的背景和意义进行介绍，以及对国内外研究在此领域的现状进行讨论，并给出本文的主要研究内容和组织结构。
+%本章主要对本文研究内容的背景和意义进行介绍，以及对国内外研究在此领域的现状进行讨论，并给出本文的主要研究内容和组织结构。
 
-    \section{背景}
+    \section{背景与意义}
     \esection{Background}
 
     文字是用来存储信息或记录语言的图像符号，图像中的文字是可以直接传递内容语义的重要信息源，而让计算机能够定位并理解数字图像中的文字，即文字检测和识别，直到现在仍是图像处理与模式识别领域中的研究热点。其对于图像检索，盲人辅助系统，无人驾驶导航及文档图像处理等人工智能系统均起到巨大的辅助作用，如图\ref{fig.c1_apply}所示：
