--- a/meta_text.tex
+++ b/meta_text.tex
@@ -44,6 +44,7 @@
 % 从理论研究、应用基础、应用研究、研究报告、软件开发、设计报告、案例分析、调研报告、其它中选择
 \ctype{应用研究}
 
+
 % 论文标题，英文
 \etitle{Scene text detection based on skeleton-cut detector and text line rectification}
 
@@ -79,26 +80,28 @@
 
 %自然场景图像中的文字是可以存储和记录语义信息的图像符号，它出现在日常生活中的方方面面，扮演着重要的角色。因而对场景图像中的文字进行精确定位及检测是目标检测领域的研究热点，其能被广泛应用到基于内容的多媒体检索，无人驾驶与智能导航平台，辅助盲人行动系统以及工业自动化等多种人工智能应用场景。但是想要从场景图像中精准地检测到文字是一项极具挑战性的工作，其难点主要体现在：复杂的自然场景中存在遮挡、阴影、对比度低等环境的影响；文字自身存在排列方向、大小、语种、颜色、字体等方面的多样性变化；场景图像被采集时因光照等环境条件影响而导致的退化和失真等质量欠佳问题。本文针对场景文字检测存在的问题对现有方法进行调研和分析，并提出下面两种有效的场景文字检测方法：
 
-自然场景图像中的文字检测是一项极具挑战性的工作，其难点主要体现在：复杂的自然场景中存在遮挡、阴影、对比度低等环境的影响；文字自身存在排列方向、大小、语种、颜色、字体等方面的多样性变化；场景图像被采集时因光照等环境条件影响而导致的退化和失真等质量欠佳问题。本文针对场景文字检测存在的问题对现有方法进行调研和分析，并提出下面两种有效的场景文字检测方法：
+自然场景图像中的文字检测是一项极具挑战性的工作，其难点主要体现在：复杂的自然场景中存在遮挡、阴影、对比度低等环境的影响；文字自身存在排列方向、大小、语种、颜色、字体等方面的多样性变化；场景图像被采集时因光照等环境条件影响而导致的退化和失真等质量欠佳问题。本文针对场景文字检测存在的问题对现有方法进行调研和分析，并提出下面两种有效的场景文字检测方法。
 
-首先针对边缘粘连问题，本文提出了一种基于边缘骨架切割的文字检测方法：对于输入的场景文字图片，利用结构化边缘检测方法得到边缘响应图，然后基于一系列像素强度值阈值，对边缘响应图进行分割，得到相应的二值化边缘图。接着在每个二值边缘图上，通过细化操作得到其边缘骨架图，并通过8 领域内像素点分析所找到的边缘骨架结点。而文字边缘与背景间的粘连点，就存在于这些边缘骨架结点中。因此断开粘连点得到候选的文字边缘骨架，然后经过形态学滤除来过滤掉大部分明显不是文字的边缘骨架，剩余的不易区分的非文字边缘骨架，可通过基于 CNN 的分类器来进一步滤除。最后基于非极大值抑制和文本行聚集操作，得到文本行定位结果。虽然基于边缘骨架切割的文字检测子取得了很高的查全率，但是定位到的文字包围盒的重叠可能达不到要求，而导致文字定位不够精准。
+首先针对边缘粘连问题，本文提出了一种基于边缘骨架切割的文字检测方法。该方法首先利用结构化边缘检测方法得到边缘响应图，然后在每个二值边缘图上通过细化操作得到其边缘骨架图，并通过8领域内像素点分析所找到的边缘骨架结点。接着断开粘连点以获得候选文字边缘骨架，再经过形态学滤除来过滤掉大部分明显不是文字的边缘骨架，剩余的不易区分的非文字边缘骨架，可通过基于CNN的分类器来进一步滤除。最后基于非极大值抑制和文本行聚集操作，得到文本行定位结果。
 
-为了更准确的定位到文字，本文接着提出一种基于二叉树搜索的文本行定位矫正方法。首先对于输入的场景文字图片，利用基于边缘骨架切割的文字检测子来提取粗略的候选文字包围盒定位结果。然而其定位结果存在重叠率不足的问题，为了进一步提高文字检测的精度，首先对候选文字包围盒计算统计边缘响应，接着通过对求取到的统计边缘响应进行水平投影、求取梯度以及执行非极大值抑制等操作，以获得候选文本行。最后由生成的候选文本行中建立起二叉树型的搜索空间，并根据优化策略从搜索空间中找到最优的文本行定位结果。该结果即是经过优化后得到的文字细致定位结果，相比于边缘骨架切割文字检测子的粗略定位结果而言，该方法的文字检测精度得到了大幅提升。
+针对文本行定位不够精准的问题，本文提出一种基于二叉树搜索的文本行定位矫正方法。该方法首先对候选文字包围盒计算统计边缘响应，接着对求取到的统计边缘响应进行水平投影、求取梯度以及执行非极大值抑制等操作，以获得候选文本行。最后由生成的候选文本行中建立起二叉树型的搜索空间，并根据优化策略从搜索空间中找到最优的文本行定位结果。该结果即是经过优化后得到的文字细致定位结果，相比于边缘骨架切割文字检测子的粗略定位结果而言文字检测精度得到提升。
 
 本文将提出的两种方法分别在ICDAR2011，ICDAR2013以及MSRA-TD500 等测试集上与相关方法进行了对比实验与结果统计，实验结果证明了本文提出方法的鲁棒性。此外，本文还在更具挑战性的SVT数据集上对提出算法进行了测试以及结果的对比，由此来证明本文算法的实用性和可靠性。
 
 }
+
+
 
 % 摘要，英文。段间空行
 \eabstract{
 
 %Text in natural scene is an image symbol that can store and record semantic information. It plays an important role in every aspect of daily life. Scene text detection is a hot research topic in the field of object detection, which can be widely applied to content based retrieval, intelligent unmanned platform, auxiliary blind system, industrial automation and other artificial intelligence applications. But precisely detecting the text is a challenging task in the scene image because of the following difficulties: Occlusion, shadows and low contrast conditions in complex natural scenes; Text's various orientation, size, color, font and language; Image' degradation and distortion. In this paper, we first investigated and analyzed the existing methods, and then proposed the following two effective methods:
 
-Scene text detection is a challenging task because of the following difficulties: Occlusion, shadows and low contrast conditions in complex natural scenes; Text's various orientation, size, color, font and language; Image' degradation and distortion. In this paper, we first investigated and analyzed the existing methods, and then proposed the following two effective methods:
+Scene text detection is a challenging task because of the following difficulties: Occlusion, shadows and low contrast conditions in complex natural scenes; Text's various orientation, size, color, font and language; Image' degradation and distortion. In this thesis, the existing methods are investigated and analyzed first, and then the following two effective methods are proposed.
 
-Firstly, this paper proposed the skeleton-cut method to solve the edge-adhesion problem. We used structured edge detection method to get edge response, then a series of binary edge maps are obtained by segmentation. Then the skeleton map is obtained by the thinning operation, and the skeleton-junctions are found through the analysis of the 8 neighborhoods algorithm. We disconnect the skeleton-junctions to get the candidate text skeletons, and then filter out most of the non-text skeletons. The remaining undistinguishable non-text skeletons can be further filtered through CNN-based classifier. Finally, based on the non maximum suppression and the text lines aggregation operation, the text location results are obtained. Although the text detection method based on skeleton-cut algorithm has achieved high recall, the overlap of the text bounding box may not meet the requirement, and the detection result of the text is not accurate enough.
+Firstly, the skeleton-cut method is proposed to solve the edge-adhesion problem. Structured edge detection method is applied to get the edge response, and the skeleton map is obtained by the thinning operation, then the skeleton-junctions are found through the analysis of the 8 neighborhoods algorithm. Skeleton-junctions are disconnected to get the candidate text skeletons, and then most of the non-text skeletons are filtered. The remaining undistinguishable non-text skeletons can be further filtered through CNN-based classifier. Finally, based on the non maximum suppression and the text lines aggregation operation, the text location results are obtained.
 
-In order to locate the text more accurately, this paper then proposes a text line rectification method based on binary tree search. First of all, for the input scene text image, the rough candidate text bounding box results are extracted by skeleton-cut detector. However, the overlap rate is not meet the requirement. In order to further improve the accuracy of text detection, we first calculate the static skeleton-box response form the candidate text bounding boxes , and then the candidate text lines are obtained form the response by horizontal projection, gradient and non maximum suppression operation. Finally, the binary-tree-based search space is built from candidate text lines, and the optimal result is found from the search space according to the optimization strategy.
+ A text line rectification method based on binary tree search is proposed to locate the text more accurately . First the static skeleton-box response is calculated form the candidate text bounding boxes , and then the candidate text lines are obtained form the response by horizontal projection, gradient and non maximum suppression operation. Finally, the binary-tree-based search space is built from candidate text lines, and the optimal result is found from the search space according to the optimization strategy.
 
 The two methods proposed in this paper are compared with the related methods on ICDAR2011, ICDAR2013 and MSRA-TD500 test set respectively, and the experimental results prove the robustness of our methods. In addition, this paper also get the results of the proposed methods on the more challenging SVT dataset, which proves the practicability and reliability of the algorithm.
 
