--- a/pages/chapter4.tex
+++ b/pages/chapter4.tex
@@ -20,7 +20,7 @@
 % The Current Maintainer of this work is Weisi Dai.
 %
 
-\chapter{基于二叉树搜索的文字检测方法}
+\chapter{基于二叉树搜索的文本行定位矫正方法}
 \echapter{Text detection based on Binary Tree Search}
 
     上一章的文字检测方法，在文字包围盒的定位处理上还不够精准。为了更准确的定位到文字包围盒的位置，本章提出一种基于二叉树搜索（Binary Tree Search，简称BTS）的文本行定位矫正方法。BTS算法能够对文字定位包围盒的结果进行优化，从而提升场景文字的检测效果，并方便后续的文字识别处理。
@@ -300,7 +300,7 @@
         \label{fig.c4_search_strategy}
         \end{figure*}
 
-        具体的2阶段判决过程如图\ref{fig.c4_search_strategy}(b) 所示：首先在第1 阶段的判断过程中，结点$n_i$ 所代表的文字行区域要根据该结点的识别成绩值$nv$ 来进行而分类：如果$nv_i>0$，那么结点$n_i$ 所代表的区域被判定为文本行区域，并用对号标记；而如果$nv_i<0$，那么结点$n_i$ 所代表的区域被判定为非文本区域，并用错号标记。通过上述对3 个结点的二分类判断后，就会在$8=2^3$种情况中只选定1种情况条目进行后续的处理。然后在第2 阶段的比较过程中，拿选定情况条目中的结点值$nv$进行对比，以此得到最终的决策结果。用图\ref{fig.c4_search_strategy}(b) 举例来说：假如$n_7$ 和$n_5$都被判定为文本，而$n_6$ 被判定为非文本，那么根据第1 阶段的判定过程，选定情况条目3；然后在情况条目3中，经过第2 阶段比较过程，发现结点值$nv_5>nv_7$，那么得到最终的决策结果是：保留父亲结点$n_5$ 代表的融合的文本行区域，而剪掉子结点$n_6$ 和$n_7$ 各自所代表的分离的文本行区域。
+        具体的2阶段判决过程如图\ref{fig.c4_search_strategy}(b) 所示：首先在第1 阶段的判断过程中，结点$n_i$ 所代表的文字行区域要根据该结点的识别成绩值$nv$ 来进行而分类：如果$nv_i>0$，那么结点$n_i$ 所代表的区域被判定为文本行区域，并用对号标记；而如果$nv_i<0$，那么结点$n_i$ 所代表的区域被判定为非文本区域，并用错号标记。通过上述对3 个结点的二分类判断后，就会在$8=2^3$种情况中只选定1种情况条目进行后续的处理。然后在第2 阶段的比较过程中，拿选定情况条目中的结点值$nv$进行对比，以此得到最终的决策结果。用图\ref{fig.c4_search_strategy}(b) 举例来说：假如$n_7$ 和$n_5$都被判定为文本，而$n_6$ 被判定为非文本，那么根据第1 阶段的判定过程，选定情况条目3；然后在情况条目3 中，经过第2 阶段比较过程，发现结点值$nv_5>nv_7$，那么得到最终的决策结果是：保留父亲结点$n_5$ 代表的融合的文本行区域，而剪掉子结点$n_6$ 和$n_7$ 各自所代表的分离的文本行区域。
 
         同理，下1条路径三元组$p_{i+1}=\left\{np_{i+1},nl_{i+1},nr_{i+1}\right\}$ 依然会在2阶段判决过程中得到自己相应的决策结果。那么重复该搜索策略，直到路径集合$P$ 中的所有路径三元组都经过处理而获得决策结果。最终，就获得了从二叉树型搜索空间中搜索得到的最优文本行定位结果。
 
@@ -314,9 +314,13 @@
 
         最后将本方法与其它先进的文字检测和识别方法在谷歌街景数据集(Google Street View Text dataset，简称为SVT)进行了对比实验。SVT 文字测试集包含249张包含文字的街景图像。这些图像大多是模糊、光照不均的，并且数据集中的文字并未完全标注过，因此该文字检测数据集也充满了挑战。
 
-        用以评价文字检测效果的标准依然是Wolf 等\cite{Wolf2006Object}提出的Object/area graphs 方法。其中对文字检测查全和查准率的计算公式如下所示：
+        用以评价文字检测效果的标准依然是Wolf 等\cite{Wolf2006Object}提出的Object/area graphs 方法。其中对文字检测查全和查准率的计算公式\ref{eq:c4_eval} 所示：
 
-        $recall = \frac {\sum_{i=1}^{|G|}Match_G(G_i,D,t_r,t_p)} {|G|}  ,   precision =\frac {\sum_{j=1}^{|D|}Match_G(D_j,G,t_r,t_p)} {|D|}$
+        \begin{equation}
+        recall = \frac {\sum_{i=1}^{|G|}Match_G(G_i,D,t_r,t_p)} {|G|}  ,   
+        precision =\frac {\sum_{j=1}^{|D|}Match_G(D_j,G,t_r,t_p)} {|D|}
+        \label{eq:c4_eval}
+        \end{equation}
 
         而文字检测的$f$值是查全recall和查准precision的均值。
 
@@ -381,7 +385,7 @@
 
         在第\ref{sec.c4_searching strategies}节基于二叉树搜索的文本行优化的搜索策略中，我们详细探讨过自然场景文字检测与识别之间的紧密关系。其中，依据文字识别的成绩，文字检测的结果才能更准确的定位到文本行的位置。而反过来，更准确的文字检测结果，也会进一步的增强文字识别的精度。
 
-        因此，我们也将本章提出的方法与其他方法在各场景文字图片数据集上做了识别成绩的对比实验，如表\ref{tab.c4_recognition} 所示。在所有的数据集上，本章提出的方法的端对端识别成绩都高于其它所有方法。在SVT-50数据集上，由Jaderberg\cite{Jaderberg2016Reading} 提出的端对端识别模型获得了P/R/F(查准/查全/F值)分别为0.85/0.68/0.76的识别分数，而本章方法在这个成绩基础上继续提升5\%从而达到0.86/0.67/0.77的识别成绩。同样在IC03 的各种词典配置的数据集上(IC03-50，IC03-FULL 和 IC03)，本章方法相对于其它先进方法对F 值的提升均在2\%左右，最终达到P/R/F分别为0.96/0.87/0.92的识别分数。
+        因此，我们也将本章提出的方法与其他方法在各场景文字图片数据集上做了识别成绩的对比实验，如表\ref{tab.c4_recognition} 所示。在所有的数据集上，本章提出的方法的端对端识别成绩都高于其它所有方法。在SVT-50 数据集上，由Jaderberg\cite{Jaderberg2016Reading} 提出的端对端识别模型获得了P/R/F(查准/查全/F值)分别为0.85/0.68/0.76的识别分数，而本章方法在这个成绩基础上继续提升5\%从而达到0.86/0.67/0.77的识别成绩。同样在IC03 的各种词典配置的数据集上(IC03-50，IC03-FULL 和 IC03)，本章方法相对于其它先进方法对F 值的提升均在2\%左右，最终达到P/R/F分别为0.96/0.87/0.92的识别分数。
 
         \begin{table*}[!h]
         \centering
@@ -404,7 +408,7 @@
         \label{tab.c4_recognition}
         \end{table*}
 
-        对于表\ref{tab.c4_recognition}中那些不含词典(lexicon) 的文字图片数据集，我们同样给出了本章提出方法与其它先进方法的识别成绩对比。可以预料的一点是，当数据集缺失词典的限制时，所有方法的F值都遭受了损失。但从实验结果来看，本章提出方法的识别成绩仍然高于其它的方法。表中显示在SVT-50和SVT数据集上，本方法分别获得77\%和55\%的识别成绩，均高于其他所有方法。而与上一章提出的方法进行对比，发现在SVT数据集上有一定的提升，而在ICDAR11 和ICDAR13 数据集上提升了近3\%，这也表明了基于二叉树搜索的文本行定位优化以及识别可以很好的处理定位不甚准确的单词，因此可以进一步提高文字检测和识别效果。一些在ICDAR 2013数据集上的检测结果如图\ref{fig.c4_results_ic13} 所示，而在SVT 数据集上的结果样例如图\ref{fig.c4_results_svt} 所示。从结果图可见，本章提出方法可以检测有粘连、模糊、过度曝光等问题的文字。
+        对于表\ref{tab.c4_recognition}中那些不含词典(lexicon) 的文字图片数据集，我们同样给出了本章提出方法与其它先进方法的识别成绩对比。可以预料的一点是，当数据集缺失词典的限制时，所有方法的F值都遭受了损失。但从实验结果来看，本章提出方法的识别成绩仍然高于其它的方法。表中显示在SVT-50和SVT数据集上，本方法分别获得77\%和55\% 的识别成绩，均高于其他所有方法。而与上一章提出的方法进行对比，发现在SVT数据集上有一定的提升，而在ICDAR11 和ICDAR13 数据集上提升了近3\%，这也表明了基于二叉树搜索的文本行定位优化以及识别可以很好的处理定位不甚准确的单词，因此可以进一步提高文字检测和识别效果。一些在ICDAR 2013数据集上的检测结果如图\ref{fig.c4_results_ic13} 所示，而在SVT 数据集上的结果样例如图\ref{fig.c4_results_svt} 所示。从结果图可见，本章提出方法可以检测有粘连、模糊、过度曝光等问题的文字。
 
         \begin{figure}[!h]
         \centering
